@@ -23,7 +23,7 @@ export CASSANDRA_DC=datacenter1
 export ORIENTDB_HOST=127.0.0.1
 export ORIENTDB_PORT=12424
 
-export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms3g -Xmx3g -Xss5m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
+export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms3g -Xmx3g -Xss5m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation"
 
 modules=$1
 echo "Start build modules: $modules"
@@ -164,7 +164,7 @@ function wait_for_bigdata() {
 
 function base_build() {
     echo "build.sh =:> Base Build Specified"
-    export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms4g -Xmx4g -Xss10m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
+    export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms4g -Xmx4g -Xss10m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation "
     echo "build.sh =:> Starting Base Build Primary"
     sbt "sbt -Dmodules=base $SBT_ARGS test"
 }
@@ -172,24 +172,9 @@ function base_build() {
 function db_build() {
     echo "build.sh =:> DB Build Specified"
     wait_for_databases
-    export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms4g -Xmx4g -Xss10m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
+    export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms4g -Xmx4g -Xss10m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation "
     echo "build.sh =:> Starting DB Build Primary"
     ./build/aware_run.sh "sbt -Dmodules=db $SBT_ARGS test"
-}
-
-function js_build() {
-    echo "build.sh =:> JS Build Specified"
-    show_mem
-    export JAVA_OPTS="-Dquill.macro.log=false -Dquill.scala.version=$SCALA_VERSION -Xms4g -Xmx4g -Xss10m -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
-    echo "build.sh =:> Starting JS Build Primary"
-    sbt -Dmodules=js $SBT_ARGS test
-}
-
-function async_build() {
-    echo "build.sh =:> Async Build Specified"
-    wait_for_mysql_postgres
-    echo "build.sh =:> Starting Async Build Primary"
-    sbt -Dmodules=async $SBT_ARGS test
 }
 
 function codegen_build() {
@@ -244,9 +229,6 @@ elif [[ $modules == "js" ]]; then
 elif [[ $modules == "finagle" ]]; then
     echo "build.sh =:> Build Script: Doing Finagle Database Build"
     finagle_build
-elif [[ $modules == "async" ]]; then
-    echo "build.sh =:> Build Script: Doing Async Database Build"
-    async_build
 elif [[ $modules == "codegen" ]]; then
     echo "build.sh =:> Build Script: Doing Code Generator Build"
     codegen_build
